--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parallelshell \"npm run dev:jade\" \"npm run dev:sass\" \"npm run watch:js\" \"npm run hot-reload\"",
+    "start": "npm run setup; parallelshell \"npm run dev:jade\" \"npm run dev:sass\" \"npm run watch:js\" \"npm run hot-reload\"",
     "dev:jade": "npm run build:jade; jade --pretty -w src/templates -o public",
     "watch:js": "mkdir public/js; watch \"npm run dev:js\" src/scripts/",
     "dev:js": "concat-cli -f src/scripts/*.js -o public/js/main.min.js",
     "dev:sass": "npm run build:sass; node-sass -i -w src/styles/main.sass -o public/css ",
     "hot-reload": "browser-sync start --files \"public/*.html, public/css/*.css, public/js/*.js\" --server \"./public\" --index \"index.html\"",
     "clean": "rm -rf public/css public/js index.html",
+    "setup": "mkdir -p dist dist/css dist/js",
     "build": "npm run clean; mkdir public/css public/js; npm run build:jade; npm run build:sass; npm run build:js;",
     "build:jade": "jade . -o public",
     "build:sass": "node-sass -i --output-style compressed src/styles/main.sass -o public/css",
