--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:sass": "npm run build:sass; node-sass -i -w src/styles/main.sass -o public/css ",
     "hot-reload": "browser-sync start --files \"public/*.html, public/css/*.css, public/js/*.js\" --server \"./public\" --index \"index.html\"",
     "clean": "rm -rf public/css public/js index.html",
-    "setup": "mkdir -p dist dist/css dist/js",
+    "setup": "mkdir -p public public/css public/js",
     "build": "npm run clean; mkdir public/css public/js; npm run build:jade; npm run build:sass; npm run build:js;",
     "build:jade": "jade . -o public",
     "build:sass": "node-sass -i --output-style compressed src/styles/main.sass -o public/css",
